# hermes

./: .gitignore  .gitmodules  Makefile  README.md
android-client/: README.md  build.gradle  gradle.properties
android-client/app/: build.gradle
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/res/drawable/: drawer_list_background_color_selector.xml  drawer_list_text_color_selector.xml
android-client/app/src/main/res/layout/: about_fragment.xml  activity_drawer.xml  activity_event.xml  activity_event_list.xml  activity_login.xml  activity_sensor.xml  activity_sensor_list.xml  activity_setup.xml  activity_setup_load.xml  dashboard_fragment.xml  (+8 more)
android-client/gradle/wrapper/: gradle-wrapper.properties
ansible/: Makefile  complete-setup.yml  hosts  production.yml  pyproject.toml  reclass  reclass-config.yml  reclass-config.yml.tmpl
ansible/inventory/classes/: linux.yml  linux.yml.tmpl
ansible/inventory/classes/hermes/: api-server.yml  gateway.yml  postgres.yml  rabbitmq.yml
ansible/inventory/nodes/: master.yml.tmpl
ansible/roles/common/defaults/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/haproxy/tasks/: certbot_debian_10.yml  certbot_ubuntu_16.yml  main.yml
ansible/roles/haproxy/templates/: haproxy.cfg.j2
ansible/roles/hermes-node/files/: haproxy.cfg  hermes-static.conf  hermes.cfg  marketplace.service  rsync-rules
ansible/roles/hermes-node/tasks/: main.yml
ansible/roles/postgres/tasks/: main.yml
ansible/roles/rabbitmq-node/defaults/: main.yml
ansible/roles/rabbitmq-node/files/: 20-defaults.conf
ansible/roles/rabbitmq-node/handlers/: main.yml
ansible/roles/rabbitmq-node/tasks/: epmd.yml  main.yml
carbon-ledger/: config.example.toml  pyproject.toml  setup.py
carbon-ledger/src/carbon/ledger/: connectors.py  data.py  ledgers.py  protocols.py
docker/: Dockerfile.market  Dockerfile.poetry  docker-compose.yml
docs/: index.html
marketplace/: Dockerfile  Makefile  README.md  config.toml.example  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
marketplace/src/: server.py
marketplace/src/hermes/: cli  cli.py  config.py  currencies.py  db.py  exceptions.py  methods.py  server.py  signals.py  types.py  utils.py  views.py  wsgi.py
marketplace/src/hermes/ad/: controllers.py  models.py
marketplace/src/hermes/db/: config.py  session.py
marketplace/src/hermes/payments/: models.py
marketplace/src/hermes/rabbtimq/: api.py
marketplace/src/hermes/user/: annotations.py  controllers.py  decorators.py  models.py  session.py  signals.py
marketplace/test/: conftest.py  utils.py
marketplace/test/fixtures/: flask.py  users.py
marketplace/test/user/: test_controllers.py  test_decorators.py  test_views.py  utils.py
marketplace/tests/: conftest.py  utils.py
marketplace/tests/fixtures/: flask.py  rabbitmq.py  seeds.py
marketplace/tests/hermes/: test_rabbitmq.py
marketplace/tests/hermes/ad/: test_controllers.py  test_views.py
marketplace/tests/hermes/fixtures/: flask.py  rabbitmq.py  users.py
marketplace/tests/hermes/user/: test_controllers.py  test_decorators.py  test_views.py  utils.py
marketplace/tests/user/: test_decorators.py  test_views.py  utils.py
scripts/: fetch_data_from_csv.py  fetch_data_from_tangle.py  pyproject.toml  setup.py
scripts/src/carbon-ledger/: data.py
scripts/src/carbon/ledger/: backends.py  data.py  ledgers.py  protocols.py
wallet/: Makefile  README.md  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
wallet/bip32/: build.gradle.kts  settings.gradle.kts
wallet/bip32/gradle/wrapper/: gradle-wrapper.properties
wallet/bip39/: build.gradle.kts  settings.gradle.kts
wallet/bip39/gradle/wrapper/: gradle-wrapper.properties
wallet/bip44/: build.gradle.kts  settings.gradle.kts
wallet/collections/: build.gradle.kts
wallet/extensions/: build.gradle.kts
wallet/gradle/wrapper/: gradle-wrapper.properties
wallet/lib/: build.gradle  build.gradle.kts
wallet/lib/src/main/: AndroidManifest.xml
wallet/ternary/: build.gradle.kts  settings.gradle
(+242 files in other folders)
