[tool.poetry]
name = "ansible"
version = "0.1.0"
description = "Ansible configuration for Hermes Marketplace API server deployment"
authors = ["Pavlos Tzianos <pavlos.tzianos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
