[tool.poetry]
name = "hermes"
version = "0.0.1"
description = "Hermes Marketplace for IoT data"
authors = ["Pavlos Tzianos <pavlos.tzianos@tum.de>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.0"
cerberus = "^1.2"
Flask-Session = "^0.3.1"
SQLAlchemy = "^1.2"


[tool.poetry.dev-dependencies]
pytest = "^4.1"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
