[tool.poetry]
name = "hermes"
version = "0.1.2"
description = "Hermes Marketplace for IoT data"
authors = ["Pavlos Tzianos <pavlos.tzianos@tum.de>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.0"
cerberus = "^1.2"
Flask-Session = "^0.3.1"
SQLAlchemy = "^1.2"
rpdb = "^0.1.6"
blinker = "^1.4"
requests = "^2.21"
pytest-cov = "^2.6"
SQLAlchemy-Utils = "^0.33.11"
pycryptodome = "^3.7"
mypy = "^0.701.0"
gunicorn = {version = "^19.9",optional = true}
psycopg2 = {version = "^2.8",optional = true}
web3 = "^4.9"
bitcoin = {git = "https://github.com/sylvandb/pybitcointools.git"}

[tool.poetry.dev-dependencies]
pytest = "^4.1"
ipdb = "^0.11.0"

[tool.poetry.extras]
prod = ["gunicorn"]
pg = ["psycopg2"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
