[tool.poetry]
name = "pan"
version = "0.1.0"
description = "The follower of Hermes. Used to follow streams of data broadcast from an Hermes client"
authors = ["Pavlos Tzianos <pavlos.tzianos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
