[tool.poetry]
name = "carbon-ledger"
version = "0.1.0"
description = "Daemon used to fetch data from a ledger and route them to a carbon daemon."
authors = ["Pavlos Tzianos <pavlos.tzianos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
